--- a/app/src/main/res/layout/fragment_collect.xml
+++ b/app/src/main/res/layout/fragment_collect.xml
@@ -49,10 +49,13 @@
 
             <com.jjoe64.graphview.GraphView
                 android:id="@+id/graphView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="110dp"
-                app:layout_constraintBottom_toTopOf="@+id/fft"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/export"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -104,32 +107,33 @@
                 app:layout_constraintEnd_toEndOf="@+id/graphView"
                 app:layout_constraintTop_toTopOf="@+id/graphView" />
 
+
             <Button
                 android:id="@+id/export"
-                android:visibility="gone"
-                android:background="@drawable/ic_button_background"
-                android:textColor="@color/secondaryColor"
-                android:layout_width="160dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="60dp"
+                android:layout_marginBottom="8dp"
                 android:text="Export"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                android:textColor="@color/secondaryColor"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toTopOf="@+id/fft"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <Button
                 android:id="@+id/fft"
-                android:visibility="gone"
-                android:background="@drawable/ic_button_background"
-                android:textColor="@color/secondaryColor"
-                android:layout_width="160dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="60dp"
                 android:text="FFT"
+                android:textColor="@color/secondaryColor"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
